--- a/index.html.files/p12.html
+++ b/index.html.files/p12.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g59'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g521'}, "*");
 </script>
 <div class="cwrap">
 <h1>Валентина Викторовна Блахирова (Афанасьева)</h1>
-<p>Родилась: 04.02.1954<br />Возраст: 67<br /></p><p>Муж: <a href="p11.html?s=40e5bd3c35ef38b9">Егор Блахиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p19.html?s=40e5bd3c35ef38b9">Мария Тарасова (Блахирова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p14.html?s=40e5bd3c35ef38b9">Егор Блахиров</a><br /></p>
+<p>Родилась: 04.02.1954<br />Возраст: 71<br /></p><p>Муж: <a href="p11.html?s=40e67b3a001d5877">Егор Кузьмич Блахиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p19.html?s=40e67b3a001d5877">Мария Тарасова (Блахирова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p14.html?s=40e67b3a001d5877">Егор Блахиров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
