--- a/index.html.files/p18.html
+++ b/index.html.files/p18.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g142'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g602'}, "*");
 </script>
 <div class="cwrap">
-<h1>Тамила</h1>
-<p>Родилась: 06.10.2010<br />Возраст: 11<br /></p><p>Отец: <a href="p14.html?s=40e5bd3c35ef38b9">Егор Блахиров</a><br />Мать: <a href="p23.html?s=40e5bd3c35ef38b9">Виталина Семеновна Блахирова (Апросимова)</a><br />Сестра: <a href="p17.html?s=40e5bd3c35ef38b9">Динара</a><br /></p>
+<h1>Тамила Егоровна (Блахирова)</h1>
+<p>Родилась: 06.10.2010<br />Возраст: 15<br /></p><p>Отец: <a href="p14.html?s=40e67b3a001d5877">Егор Блахиров</a><br />Мать: <a href="p23.html?s=40e67b3a001d5877">Виталина Семеновна Блахирова (Апросимова)</a><br />Сестра: <a href="p17.html?s=40e67b3a001d5877">Динара (Федорова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
