--- a/index.html.files/p2.html
+++ b/index.html.files/p2.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g93'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g554'}, "*");
 </script>
 <div class="cwrap">
-<h1>Виктор Блахиров</h1>
-<p>Родился: 09.05.1979<br />Возраст: 42<br /></p><p>Отец: <a href="p1.html?s=40e5bd3c35ef38b9">Гаврил Блахиров</a><br />Мать: <a href="p6.html?s=40e5bd3c35ef38b9">Вера Назаровна Блахирова (Бабыканова)</a><br />Брат: <a href="p8.html?s=40e5bd3c35ef38b9">Анатолий Блахиров</a><br />Сестра: <a href="p3.html?s=40e5bd3c35ef38b9">Валентина Блахирова</a><br />Жена: <a href="p7.html?s=40e5bd3c35ef38b9">Луиза Олеговна Блахирова (Ючюгяева)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p10.html?s=40e5bd3c35ef38b9">Тимур Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p9.html?s=40e5bd3c35ef38b9">Роман Блахиров</a><br /></p>
+<h1>Виктор Гаврильевич Блахиров</h1>
+<p>Родился: 09.05.1979<br />Род: Блахировы<br />Возраст: 46<br />создатель данного генеологического дерева<br /></p><p>Отец: <a href="p1.html?s=40e67b3a001d5877">Гаврил Кузьмич Блахиров</a><br />Мать: <a href="p6.html?s=40e67b3a001d5877">Вера Назаровна Блахирова (Бабыканова)</a><br />Брат: <a href="p8.html?s=40e67b3a001d5877">Анатолий Гаврильевич Блахиров</a><br />Сестра: <a href="p3.html?s=40e67b3a001d5877">Валентина Гавриловна Блахирова</a><br />Жена: <a href="p7.html?s=40e67b3a001d5877">Луиза Олеговна Блахирова (Ючюгяева)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p10.html?s=40e67b3a001d5877">Тимур Викторович Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p9.html?s=40e67b3a001d5877">Роман Викторович Блахиров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
