--- a/index.html.files/p22.html
+++ b/index.html.files/p22.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g133'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g593'}, "*");
 </script>
 <div class="cwrap">
-<h1>Уйгулаана</h1>
-<p>Родилась: 14.10.2011<br />Возраст: 10<br /></p><p>Отец: <a href="p20.html?s=40e5bd3c35ef38b9">Петр Тарасов</a><br />Мать: <a href="p19.html?s=40e5bd3c35ef38b9">Мария Тарасова (Блахирова)</a><br />Сестра: <a href="p21.html?s=40e5bd3c35ef38b9">Айыына</a><br /></p>
+<h1>Уйгулаана Петровна (Тарасова)</h1>
+<p>Родилась: 14.10.2011<br />Возраст: 14<br /></p><p>Отец: <a href="p20.html?s=40e67b3a001d5877">Петр Николаевич Тарасов</a><br />Мать: <a href="p19.html?s=40e67b3a001d5877">Мария Тарасова (Блахирова)</a><br />Сестра: <a href="p21.html?s=40e67b3a001d5877">Айыына Петровна Тарасова</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
