--- a/index.html.files/p23.html
+++ b/index.html.files/p23.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g124'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g584'}, "*");
 </script>
 <div class="cwrap">
 <h1>Виталина Семеновна Блахирова (Апросимова)</h1>
-<p>Родилась: 24.10.1987<br />Возраст: 34<br /></p><p>Муж: <a href="p14.html?s=40e5bd3c35ef38b9">Егор Блахиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p17.html?s=40e5bd3c35ef38b9">Динара</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p18.html?s=40e5bd3c35ef38b9">Тамила</a><br /></p>
+<p>Родилась: 24.10.1987<br />Возраст: 38<br /></p><p>Муж: <a href="p14.html?s=40e67b3a001d5877">Егор Блахиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p17.html?s=40e67b3a001d5877">Динара (Федорова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p18.html?s=40e67b3a001d5877">Тамила Егоровна (Блахирова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
