--- a/index.html.files/p24.html
+++ b/index.html.files/p24.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g68'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g530'}, "*");
 </script>
 <div class="cwrap">
 <h1>Николай Блахиров</h1>
-<p>Родился: 06.02.1960<br />Род: Блахировы<br />Возраст: 61<br /></p><p>Отец: <a href="p5.html?s=40e5bd3c35ef38b9">Кузьма Блахиров</a><br />Мать: <a href="p68.html?s=40e5bd3c35ef38b9">Мария Дайбаннырова</a><br />Брат: <a href="p1.html?s=40e5bd3c35ef38b9">Гаврил Блахиров</a><br />Брат: <a href="p11.html?s=40e5bd3c35ef38b9">Егор Блахиров</a><br />Сестра: <a href="p59.html?s=40e5bd3c35ef38b9">Парасковья Богдокумова (Блахирова)</a><br />Брат: <a href="p40.html?s=40e5bd3c35ef38b9">Василий Блахиров</a><br />Брат: <a href="p47.html?s=40e5bd3c35ef38b9">Митрофан Блахиров</a><br />Брат: <a href="p67.html?s=40e5bd3c35ef38b9">Кузьма Блахиров</a><br />Жена: <a href="p25.html?s=40e5bd3c35ef38b9">Валентина Алексеевна Блахирова (Баланова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p26.html?s=40e5bd3c35ef38b9">Алексей Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p27.html?s=40e5bd3c35ef38b9">Николай Блахиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p28.html?s=40e5bd3c35ef38b9">Ньургуйаана Владимирова (Блахирова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p29.html?s=40e5bd3c35ef38b9">Александра Егоровна Мохначевская</a><br /></p>
+<p>Родился: 06.02.1960<br />Род: Блахировы<br />Возраст: 65<br /></p><p>Отец: <a href="p5.html?s=40e67b3a001d5877">Кузьма Гаврильевич Былахиров</a><br />Мать: <a href="p68.html?s=40e67b3a001d5877">Мария Иосифна Дайбаннырова</a><br />Брат: <a href="p1.html?s=40e67b3a001d5877">Гаврил Кузьмич Блахиров</a><br />Брат: <a href="p11.html?s=40e67b3a001d5877">Егор Кузьмич Блахиров</a><br />Сестра: <a href="p59.html?s=40e67b3a001d5877">Парасковья Богдокумова (Блахирова)</a><br />Брат: <a href="p40.html?s=40e67b3a001d5877">Василий Кузьмич Блахиров</a><br />Брат: <a href="p47.html?s=40e67b3a001d5877">Митрофан Кузьмич Былахиров</a><br />Брат: <a href="p67.html?s=40e67b3a001d5877">Кузьма Кузьмич Блахиров</a><br />Жена: <a href="p25.html?s=40e67b3a001d5877">Валентина Алексеевна Блахирова (Баланова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p26.html?s=40e67b3a001d5877">Алексей Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p27.html?s=40e67b3a001d5877">Николай Блахиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p28.html?s=40e67b3a001d5877">Ньургуйаана Владимирова (Блахирова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p29.html?s=40e67b3a001d5877">Александра Егоровна Мохначевская</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
