--- a/index.html.files/p27.html
+++ b/index.html.files/p27.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g173'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g633'}, "*");
 </script>
 <div class="cwrap">
 <h1>Николай Блахиров</h1>
-<p>Родился: 30.03.1986<br />Возраст: 35<br /></p><p>Отец: <a href="p24.html?s=40e5bd3c35ef38b9">Николай Блахиров</a><br />Мать: <a href="p25.html?s=40e5bd3c35ef38b9">Валентина Алексеевна Блахирова (Баланова)</a><br />Брат: <a href="p26.html?s=40e5bd3c35ef38b9">Алексей Блахиров</a><br />Сестра: <a href="p28.html?s=40e5bd3c35ef38b9">Ньургуйаана Владимирова (Блахирова)</a><br />Сестра: <a href="p29.html?s=40e5bd3c35ef38b9">Александра Егоровна Мохначевская</a><br />Жена: <a href="p31.html?s=40e5bd3c35ef38b9">Екатерина Андреевна Блахирова</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p35.html?s=40e5bd3c35ef38b9">Нарыйа</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p36.html?s=40e5bd3c35ef38b9">Айталыына</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p37.html?s=40e5bd3c35ef38b9">Сайыына</a><br /></p>
+<p>Родился: 30.03.1986<br />Род: Блахировы<br />Возраст: 39<br /></p><p>Отец: <a href="p24.html?s=40e67b3a001d5877">Николай Блахиров</a><br />Мать: <a href="p25.html?s=40e67b3a001d5877">Валентина Алексеевна Блахирова (Баланова)</a><br />Брат: <a href="p26.html?s=40e67b3a001d5877">Алексей Блахиров</a><br />Сестра: <a href="p28.html?s=40e67b3a001d5877">Ньургуйаана Владимирова (Блахирова)</a><br />Сестра: <a href="p29.html?s=40e67b3a001d5877">Александра Егоровна Мохначевская</a><br />Жена: <a href="p31.html?s=40e67b3a001d5877">Екатерина Николаевна Блахирова (Андреева)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p35.html?s=40e67b3a001d5877">Нарыйа Николаевна (Блахирова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p36.html?s=40e67b3a001d5877">Айталыына Николаевна Блахирова</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p37.html?s=40e67b3a001d5877">Сайыына Николаевна (Блахирова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
