--- a/index.html.files/p28.html
+++ b/index.html.files/p28.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g178'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g638'}, "*");
 </script>
 <div class="cwrap">
 <h1>Ньургуйаана Владимирова (Блахирова)</h1>
-<p>Родилась: 22.08.1991<br />Возраст: 30<br /></p><p>Отец: <a href="p24.html?s=40e5bd3c35ef38b9">Николай Блахиров</a><br />Мать: <a href="p25.html?s=40e5bd3c35ef38b9">Валентина Алексеевна Блахирова (Баланова)</a><br />Брат: <a href="p26.html?s=40e5bd3c35ef38b9">Алексей Блахиров</a><br />Брат: <a href="p27.html?s=40e5bd3c35ef38b9">Николай Блахиров</a><br />Сестра: <a href="p29.html?s=40e5bd3c35ef38b9">Александра Егоровна Мохначевская</a><br />Муж: <a href="p32.html?s=40e5bd3c35ef38b9">Александр Александрович Владимиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p38.html?s=40e5bd3c35ef38b9">Айсиэн Владимиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p39.html?s=40e5bd3c35ef38b9">Сардаана</a><br /></p>
+<p>Родилась: 22.08.1991<br />Род: Блахировы<br />Возраст: 34<br /></p><p>Отец: <a href="p24.html?s=40e67b3a001d5877">Николай Блахиров</a><br />Мать: <a href="p25.html?s=40e67b3a001d5877">Валентина Алексеевна Блахирова (Баланова)</a><br />Брат: <a href="p26.html?s=40e67b3a001d5877">Алексей Блахиров</a><br />Брат: <a href="p27.html?s=40e67b3a001d5877">Николай Блахиров</a><br />Сестра: <a href="p29.html?s=40e67b3a001d5877">Александра Егоровна Мохначевская</a><br />Муж: <a href="p32.html?s=40e67b3a001d5877">Александр Александрович Владимиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p38.html?s=40e67b3a001d5877">Айсиэн Александрович Владимиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p39.html?s=40e67b3a001d5877">Сардаана Александровна (Владимирова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
