--- a/index.html.files/p30.html
+++ b/index.html.files/p30.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g169'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g629'}, "*");
 </script>
 <div class="cwrap">
 <h1>Анна Игнатьевна Блахирова (Соловьева)</h1>
-<p>Родилась: 05.09.1988<br />Возраст: 33<br /></p><p>Муж: <a href="p26.html?s=40e5bd3c35ef38b9">Алексей Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p33.html?s=40e5bd3c35ef38b9">Дьулуур</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p34.html?s=40e5bd3c35ef38b9">Мичил</a><br /></p>
+<p>Родилась: 05.09.1988<br />Возраст: 37<br /></p><p>Муж: <a href="p26.html?s=40e67b3a001d5877">Алексей Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p33.html?s=40e67b3a001d5877">Дьулуур Алексеевич Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p34.html?s=40e67b3a001d5877">Мичил Алексеевич Блахиров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
