--- a/index.html.files/p31.html
+++ b/index.html.files/p31.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g174'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g634'}, "*");
 </script>
 <div class="cwrap">
-<h1>Екатерина Андреевна Блахирова</h1>
-<p>Родилась: 11.05.1987<br />Возраст: 34<br /></p><p>Муж: <a href="p27.html?s=40e5bd3c35ef38b9">Николай Блахиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p35.html?s=40e5bd3c35ef38b9">Нарыйа</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p36.html?s=40e5bd3c35ef38b9">Айталыына</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p37.html?s=40e5bd3c35ef38b9">Сайыына</a><br /></p>
+<h1>Екатерина Николаевна Блахирова (Андреева)</h1>
+<p>Родилась: 11.05.1987<br />Возраст: 38<br /></p><p>Муж: <a href="p27.html?s=40e67b3a001d5877">Николай Блахиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p35.html?s=40e67b3a001d5877">Нарыйа Николаевна (Блахирова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p36.html?s=40e67b3a001d5877">Айталыына Николаевна Блахирова</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p37.html?s=40e67b3a001d5877">Сайыына Николаевна (Блахирова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
