--- a/index.html.files/p32.html
+++ b/index.html.files/p32.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g179'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g639'}, "*");
 </script>
 <div class="cwrap">
 <h1>Александр Александрович Владимиров</h1>
-<p>Родился: 18.09.1993<br />Возраст: 28<br /></p><p>Жена: <a href="p28.html?s=40e5bd3c35ef38b9">Ньургуйаана Владимирова (Блахирова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p38.html?s=40e5bd3c35ef38b9">Айсиэн Владимиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p39.html?s=40e5bd3c35ef38b9">Сардаана</a><br /></p>
+<p>Родился: 18.09.1993<br />Возраст: 32<br /></p><p>Жена: <a href="p28.html?s=40e67b3a001d5877">Ньургуйаана Владимирова (Блахирова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p38.html?s=40e67b3a001d5877">Айсиэн Александрович Владимиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p39.html?s=40e67b3a001d5877">Сардаана Александровна (Владимирова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
