--- a/index.html.files/p34.html
+++ b/index.html.files/p34.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g192'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g652'}, "*");
 </script>
 <div class="cwrap">
-<h1>Мичил</h1>
-<p>Родился: 27.03.2019<br />Возраст: 2<br /></p><p>Отец: <a href="p26.html?s=40e5bd3c35ef38b9">Алексей Блахиров</a><br />Мать: <a href="p30.html?s=40e5bd3c35ef38b9">Анна Игнатьевна Блахирова (Соловьева)</a><br />Брат: <a href="p33.html?s=40e5bd3c35ef38b9">Дьулуур</a><br /></p>
+<h1>Мичил Алексеевич Блахиров</h1>
+<p>Родился: 27.03.2019<br />Возраст: 6<br /></p><p>Отец: <a href="p26.html?s=40e67b3a001d5877">Алексей Блахиров</a><br />Мать: <a href="p30.html?s=40e67b3a001d5877">Анна Игнатьевна Блахирова (Соловьева)</a><br />Брат: <a href="p33.html?s=40e67b3a001d5877">Дьулуур Алексеевич Блахиров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
