--- a/index.html.files/p36.html
+++ b/index.html.files/p36.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g201'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g661'}, "*");
 </script>
 <div class="cwrap">
-<h1>Айталыына</h1>
-<p>Родилась: 11.09.2010<br />Возраст: 11<br /></p><p>Отец: <a href="p27.html?s=40e5bd3c35ef38b9">Николай Блахиров</a><br />Мать: <a href="p31.html?s=40e5bd3c35ef38b9">Екатерина Андреевна Блахирова</a><br />Сестра: <a href="p35.html?s=40e5bd3c35ef38b9">Нарыйа</a><br />Сестра: <a href="p37.html?s=40e5bd3c35ef38b9">Сайыына</a><br /></p>
+<h1>Айталыына Николаевна Блахирова</h1>
+<p>Родилась: 11.09.2010<br />Возраст: 15<br /></p><p>Отец: <a href="p27.html?s=40e67b3a001d5877">Николай Блахиров</a><br />Мать: <a href="p31.html?s=40e67b3a001d5877">Екатерина Николаевна Блахирова (Андреева)</a><br />Сестра: <a href="p35.html?s=40e67b3a001d5877">Нарыйа Николаевна (Блахирова)</a><br />Сестра: <a href="p37.html?s=40e67b3a001d5877">Сайыына Николаевна (Блахирова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
