--- a/index.html.files/p38.html
+++ b/index.html.files/p38.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g210'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g670'}, "*");
 </script>
 <div class="cwrap">
-<h1>Айсиэн Владимиров</h1>
-<p>Родился: 24.10.2014<br />Возраст: 7<br /></p><p>Отец: <a href="p32.html?s=40e5bd3c35ef38b9">Александр Александрович Владимиров</a><br />Мать: <a href="p28.html?s=40e5bd3c35ef38b9">Ньургуйаана Владимирова (Блахирова)</a><br />Сестра: <a href="p39.html?s=40e5bd3c35ef38b9">Сардаана</a><br /></p>
+<h1>Айсиэн Александрович Владимиров</h1>
+<p>Родился: 24.10.2014<br />Возраст: 11<br /></p><p>Отец: <a href="p32.html?s=40e67b3a001d5877">Александр Александрович Владимиров</a><br />Мать: <a href="p28.html?s=40e67b3a001d5877">Ньургуйаана Владимирова (Блахирова)</a><br />Сестра: <a href="p39.html?s=40e67b3a001d5877">Сардаана Александровна (Владимирова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
