--- a/index.html.files/p43.html
+++ b/index.html.files/p43.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g223'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g683'}, "*");
 </script>
 <div class="cwrap">
-<h1>Туяра Иванова (Блахирова)</h1>
-<p>Родилась: 31.03.1993<br />Возраст: 28<br /></p><p>Отец: <a href="p40.html?s=40e5bd3c35ef38b9">Василий Блахиров</a><br />Мать: <a href="p41.html?s=40e5bd3c35ef38b9">Виктория Ивановна Блахирова (Кривошапкина)</a><br />Брат: <a href="p42.html?s=40e5bd3c35ef38b9">Семен</a><br />Муж: <a href="p44.html?s=40e5bd3c35ef38b9">Григорий Александрович Иванов</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p45.html?s=40e5bd3c35ef38b9">Нарыйаана</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p46.html?s=40e5bd3c35ef38b9">Кэрэчээнэ</a><br /></p>
+<h1>Туйаара Иванова (Блахирова)</h1>
+<p>Родилась: 31.03.1993<br />Род: Блахировы<br />Возраст: 32<br /></p><p>Отец: <a href="p40.html?s=40e67b3a001d5877">Василий Кузьмич Блахиров</a><br />Мать: <a href="p41.html?s=40e67b3a001d5877">Виктория Ивановна Блахирова (Кривошапкина)</a><br />Брат: <a href="p42.html?s=40e67b3a001d5877">Семен Васильевич Блахиров</a><br />Муж: <a href="p44.html?s=40e67b3a001d5877">Григорий Александрович Иванов</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p45.html?s=40e67b3a001d5877">Нарыйаана Григорьевна (Иванова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p46.html?s=40e67b3a001d5877">Кэрэчээнэ Григорьевна (Иванова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
