--- a/index.html.files/p49.html
+++ b/index.html.files/p49.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g238'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g698'}, "*");
 </script>
 <div class="cwrap">
-<h1>Мария Ананьева (Блахирова)</h1>
-<p>Родилась: 29.04.1988<br />Возраст: 33<br /></p><p>Отец: <a href="p47.html?s=40e5bd3c35ef38b9">Митрофан Блахиров</a><br />Мать: <a href="p48.html?s=40e5bd3c35ef38b9">Зоя Викторовна Блахирова (Слепцова)</a><br />Сестра: <a href="p51.html?s=40e5bd3c35ef38b9">Виктория Блахирова</a><br />Брат: <a href="p52.html?s=40e5bd3c35ef38b9">Кузьма Блахиров</a><br />Муж: <a href="p50.html?s=40e5bd3c35ef38b9">Ананий Парфенович Ананьев</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p55.html?s=40e5bd3c35ef38b9">Эрчимэн</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p57.html?s=40e5bd3c35ef38b9">Мичийэ</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p56.html?s=40e5bd3c35ef38b9">Алгыстаан</a><br /></p>
+<h1>Мария Ананьева (Былахирова)</h1>
+<p>Родилась: 29.04.1988<br />Род: Блахировы<br />Возраст: 37<br /></p><p>Отец: <a href="p47.html?s=40e67b3a001d5877">Митрофан Кузьмич Былахиров</a><br />Мать: <a href="p48.html?s=40e67b3a001d5877">Зоя Викторовна Былахирова (Слепцова)</a><br />Сестра: <a href="p51.html?s=40e67b3a001d5877">Виктория Санникова (Былахирова)</a><br />Брат: <a href="p52.html?s=40e67b3a001d5877">Кузьма Былахиров</a><br />Муж: <a href="p50.html?s=40e67b3a001d5877">Ананий Парфеньевич Ананьев</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p55.html?s=40e67b3a001d5877">Эрчимэн Ананьевич Ананьев</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p57.html?s=40e67b3a001d5877">Мичийэ Ананьевна (Ананьева)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p56.html?s=40e67b3a001d5877">Алгыстаан Ананьевич Ананьев</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
