--- a/index.html.files/p5.html
+++ b/index.html.files/p5.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g45'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g508'}, "*");
 </script>
 <div class="cwrap">
-<h1>Кузьма Блахиров</h1>
-<p>Родился: 29.08.1921<br />Умер: 20.12.2011<br />Род: Блахировы<br />Продолжительность жизни: 90<br />(Ийэтэ 5-6саас. олбут)<br /></p><p>Отец: <a href="p69.html?s=40e5bd3c35ef38b9">Гаврил Дмитриевич Былахиров</a><br />Мать: <a href="p70.html?s=40e5bd3c35ef38b9">Ульяна Христофоровна Большакова</a><br />Сестра: <a href="p112.html?s=40e5bd3c35ef38b9">Александра</a><br />Жена: <a href="p68.html?s=40e5bd3c35ef38b9">Мария Дайбаннырова</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p1.html?s=40e5bd3c35ef38b9">Гаврил Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p11.html?s=40e5bd3c35ef38b9">Егор Блахиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p59.html?s=40e5bd3c35ef38b9">Парасковья Богдокумова (Блахирова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p24.html?s=40e5bd3c35ef38b9">Николай Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p40.html?s=40e5bd3c35ef38b9">Василий Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p47.html?s=40e5bd3c35ef38b9">Митрофан Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p67.html?s=40e5bd3c35ef38b9">Кузьма Блахиров</a><br /></p>
+<h1>Кузьма Гаврильевич Былахиров</h1>
+<p>Родился: 29.08.1921<br />Умер: 20.12.2011<br />Род: Блахировы<br />Продолжительность жизни: 90<br />(Ийэтэ 5-6саас. олбут)<br /></p><p>Отец: <a href="p69.html?s=40e67b3a001d5877">Гаврил Дмитриевич Былахиров</a><br />Мать: <a href="p70.html?s=40e67b3a001d5877">Ульяна Христофоровна Большакова</a><br />Сестра: <a href="p112.html?s=40e67b3a001d5877">Александра</a><br />Жена: <a href="p68.html?s=40e67b3a001d5877">Мария Иосифна Дайбаннырова</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p1.html?s=40e67b3a001d5877">Гаврил Кузьмич Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p11.html?s=40e67b3a001d5877">Егор Кузьмич Блахиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p59.html?s=40e67b3a001d5877">Парасковья Богдокумова (Блахирова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p24.html?s=40e67b3a001d5877">Николай Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p40.html?s=40e67b3a001d5877">Василий Кузьмич Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p47.html?s=40e67b3a001d5877">Митрофан Кузьмич Былахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p67.html?s=40e67b3a001d5877">Кузьма Кузьмич Блахиров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
