--- a/index.html.files/p50.html
+++ b/index.html.files/p50.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g239'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g699'}, "*");
 </script>
 <div class="cwrap">
-<h1>Ананий Парфенович Ананьев</h1>
-<p>Родился: 23.09.1987<br />Возраст: 34<br /></p><p>Жена: <a href="p49.html?s=40e5bd3c35ef38b9">Мария Ананьева (Блахирова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p55.html?s=40e5bd3c35ef38b9">Эрчимэн</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p57.html?s=40e5bd3c35ef38b9">Мичийэ</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p56.html?s=40e5bd3c35ef38b9">Алгыстаан</a><br /></p>
+<h1>Ананий Парфеньевич Ананьев</h1>
+<p>Родился: 23.09.1987<br />Возраст: 38<br /></p><p>Жена: <a href="p49.html?s=40e67b3a001d5877">Мария Ананьева (Былахирова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p55.html?s=40e67b3a001d5877">Эрчимэн Ананьевич Ананьев</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p57.html?s=40e67b3a001d5877">Мичийэ Ананьевна (Ананьева)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p56.html?s=40e67b3a001d5877">Алгыстаан Ананьевич Ананьев</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
