--- a/index.html.files/p52.html
+++ b/index.html.files/p52.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g247'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g709'}, "*");
 </script>
 <div class="cwrap">
-<h1>Кузьма Блахиров</h1>
-<p>Родился: 31.03.1995<br />Возраст: 26<br /></p><p>Отец: <a href="p47.html?s=40e5bd3c35ef38b9">Митрофан Блахиров</a><br />Мать: <a href="p48.html?s=40e5bd3c35ef38b9">Зоя Викторовна Блахирова (Слепцова)</a><br />Сестра: <a href="p49.html?s=40e5bd3c35ef38b9">Мария Ананьева (Блахирова)</a><br />Сестра: <a href="p51.html?s=40e5bd3c35ef38b9">Виктория Блахирова</a><br />Жена: <a href="p58.html?s=40e5bd3c35ef38b9">Элеонора Эдуардовна Блахирова (Васильева)</a><br /></p>
+<h1>Кузьма Былахиров</h1>
+<p>Родился: 31.03.1995<br />Род: Блахировы<br />Возраст: 30<br /></p><p>Отец: <a href="p47.html?s=40e67b3a001d5877">Митрофан Кузьмич Былахиров</a><br />Мать: <a href="p48.html?s=40e67b3a001d5877">Зоя Викторовна Былахирова (Слепцова)</a><br />Сестра: <a href="p49.html?s=40e67b3a001d5877">Мария Ананьева (Былахирова)</a><br />Сестра: <a href="p51.html?s=40e67b3a001d5877">Виктория Санникова (Былахирова)</a><br />Жена: <a href="p58.html?s=40e67b3a001d5877">Элеонора Эдуардовна Былахирова (Васильева)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
