--- a/index.html.files/p53.html
+++ b/index.html.files/p53.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g266'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g728'}, "*");
 </script>
 <div class="cwrap">
-<h1>Сайаана</h1>
-<p>Родилась: 05.02.2010<br />Возраст: 11<br /></p><p>Мать: <a href="p51.html?s=40e5bd3c35ef38b9">Виктория Блахирова</a><br />Брат: <a href="p54.html?s=40e5bd3c35ef38b9">Тимир</a><br /></p>
+<h1>Сайаана Николаевна (Санникова)</h1>
+<p>Родилась: 05.02.2010<br />Возраст: 15<br /></p><p>Отец: <a href="p117.html?s=40e67b3a001d5877">Николай Григорьевич Санников</a><br />Мать: <a href="p51.html?s=40e67b3a001d5877">Виктория Санникова (Былахирова)</a><br />Единоутробный брат: <a href="p54.html?s=40e67b3a001d5877">Тимир Александрович Борисов</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
