--- a/index.html.files/p55.html
+++ b/index.html.files/p55.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g253'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g715'}, "*");
 </script>
 <div class="cwrap">
-<h1>Эрчимэн</h1>
-<p>Родился: 06.02.2015<br />Возраст: 6<br /></p><p>Отец: <a href="p50.html?s=40e5bd3c35ef38b9">Ананий Парфенович Ананьев</a><br />Мать: <a href="p49.html?s=40e5bd3c35ef38b9">Мария Ананьева (Блахирова)</a><br />Сестра: <a href="p57.html?s=40e5bd3c35ef38b9">Мичийэ</a><br />Брат: <a href="p56.html?s=40e5bd3c35ef38b9">Алгыстаан</a><br /></p>
+<h1>Эрчимэн Ананьевич Ананьев</h1>
+<p>Родился: 06.02.2015<br />Возраст: 10<br /></p><p>Отец: <a href="p50.html?s=40e67b3a001d5877">Ананий Парфеньевич Ананьев</a><br />Мать: <a href="p49.html?s=40e67b3a001d5877">Мария Ананьева (Былахирова)</a><br />Сестра: <a href="p57.html?s=40e67b3a001d5877">Мичийэ Ананьевна (Ананьева)</a><br />Брат: <a href="p56.html?s=40e67b3a001d5877">Алгыстаан Ананьевич Ананьев</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
