--- a/index.html.files/p6.html
+++ b/index.html.files/p6.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g54'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g516'}, "*");
 </script>
 <div class="cwrap">
 <h1>Вера Назаровна Блахирова (Бабыканова)</h1>
-<p>Родилась: 09.09.1953<br />Возраст: 68<br /></p><p>Муж: <a href="p1.html?s=40e5bd3c35ef38b9">Гаврил Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p8.html?s=40e5bd3c35ef38b9">Анатолий Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p2.html?s=40e5bd3c35ef38b9">Виктор Блахиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p3.html?s=40e5bd3c35ef38b9">Валентина Блахирова</a><br /></p>
+<p>Родилась: 09.09.1953<br />Возраст: 72<br /></p><p>Муж: <a href="p1.html?s=40e67b3a001d5877">Гаврил Кузьмич Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p8.html?s=40e67b3a001d5877">Анатолий Гаврильевич Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p2.html?s=40e67b3a001d5877">Виктор Гаврильевич Блахиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p3.html?s=40e67b3a001d5877">Валентина Гавриловна Блахирова</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
