--- a/index.html.files/p60.html
+++ b/index.html.files/p60.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g64'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g526'}, "*");
 </script>
 <div class="cwrap">
 <h1>Алексей Васильевич Богдокумов</h1>
-<p>Родился: 21.09.1956<br />Возраст: 65<br /></p><p>Жена: <a href="p59.html?s=40e5bd3c35ef38b9">Парасковья Богдокумова (Блахирова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p61.html?s=40e5bd3c35ef38b9">Алексей Богдокумов</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p62.html?s=40e5bd3c35ef38b9">Анна Алексеевна Петрова (Богдокумова)</a><br /></p>
+<p>Родился: 21.09.1956<br />Умер: 01.05.2022 (рак)<br />Продолжительность жизни: 65<br /></p><p>Жена: <a href="p59.html?s=40e67b3a001d5877">Парасковья Богдокумова (Блахирова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p61.html?s=40e67b3a001d5877">Алексей Богдокумов</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p62.html?s=40e67b3a001d5877">Анна Алексеевна Петрова (Богдокумова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
