--- a/index.html.files/p66.html
+++ b/index.html.files/p66.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g163'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g623'}, "*");
 </script>
 <div class="cwrap">
-<h1>Аэлита</h1>
-<p>Родилась: 23.01.2008<br />Возраст: 13<br /></p><p>Отец: <a href="p61.html?s=40e5bd3c35ef38b9">Алексей Богдокумов</a><br />Единокровный брат: <a href="p65.html?s=40e5bd3c35ef38b9">Богдан</a><br /></p>
+<h1>Аэлита Алексеевна (Богдокумова)</h1>
+<p>Родилась: 23.01.2008<br />Возраст: 17<br /></p><p>Отец: <a href="p61.html?s=40e67b3a001d5877">Алексей Богдокумов</a><br />Единокровный брат: <a href="p65.html?s=40e67b3a001d5877">Богдан Алексеевич Богдокумов</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
