--- a/index.html.files/p69.html
+++ b/index.html.files/p69.html
@@ -33,10 +33,10 @@ window.parent.postMessage({event_id: 'gmsg', data: 'g37'}, "*");
 </script>
 <div class="cwrap">
 <h1>Гаврил Дмитриевич Былахиров</h1>
-<p>Родился: 08.01.1899<br />Умер: 1937 (перитонит)<br />Продолжительность жизни: 37<br />(I-Дьохсо5он, олонхосут)<br /></p><p>Отец: <a href="p78.html?s=40e5bd3c35ef38b9">Дмитрий Иванович Блохыров</a><br />Мать: <a href="p79.html?s=40e5bd3c35ef38b9">Александра Николаевна Блохырова</a><br />Брат: <a href="p81.html?s=40e5bd3c35ef38b9">Луха</a><br />Брат: <a href="p82.html?s=40e5bd3c35ef38b9">Хабырыылла</a><br />Брат: <a href="p83.html?s=40e5bd3c35ef38b9">Дьэбдьиэй</a><br />Жена: <a href="p70.html?s=40e5bd3c35ef38b9">Ульяна Христофоровна Большакова</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p112.html?s=40e5bd3c35ef38b9">Александра</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p5.html?s=40e5bd3c35ef38b9">Кузьма Блахиров</a><br /></p>
+<p>Родился: 08.01.1899<br />Умер: 1937 (перитонит)<br />Продолжительность жизни: 37<br />(I-Дьохсо5он, олонхосут)<br /></p><p>Отец: <a href="p78.html?s=40e67b3a001d5877">Дмитрий Иванович Блохыров</a><br />Мать: <a href="p79.html?s=40e67b3a001d5877">Александра Николаевна Блохырова</a><br />Брат: <a href="p81.html?s=40e67b3a001d5877">Луха Дмитриевич Блохыров</a><br />Брат: <a href="p82.html?s=40e67b3a001d5877">Хабырыылла Дмитриевич Блохыров</a><br />Сестра: <a href="p83.html?s=40e67b3a001d5877">Дьэбдьиэй Дмитриевна (Блохырова)</a><br />Жена: <a href="p70.html?s=40e67b3a001d5877">Ульяна Христофоровна Большакова</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p112.html?s=40e67b3a001d5877">Александра</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p5.html?s=40e67b3a001d5877">Кузьма Гаврильевич Былахиров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
