--- a/index.html.files/p7.html
+++ b/index.html.files/p7.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g94'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g555'}, "*");
 </script>
 <div class="cwrap">
 <h1>Луиза Олеговна Блахирова (Ючюгяева)</h1>
-<p>Родилась: 06.06.1980<br />Возраст: 41<br /></p><p>Муж: <a href="p2.html?s=40e5bd3c35ef38b9">Виктор Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p10.html?s=40e5bd3c35ef38b9">Тимур Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p9.html?s=40e5bd3c35ef38b9">Роман Блахиров</a><br /></p>
+<p>Родилась: 06.06.1980<br />Возраст: 45<br /></p><p>Муж: <a href="p2.html?s=40e67b3a001d5877">Виктор Гаврильевич Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p10.html?s=40e67b3a001d5877">Тимур Викторович Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p9.html?s=40e67b3a001d5877">Роман Викторович Блахиров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
