--- a/index.html.files/p78.html
+++ b/index.html.files/p78.html
@@ -33,10 +33,10 @@ window.parent.postMessage({event_id: 'gmsg', data: 'g21'}, "*");
 </script>
 <div class="cwrap">
 <h1>Дмитрий Иванович Блохыров</h1>
-<p>Родился: ?<br />Умер: ?<br />(1-Дьохсо5он, Туокэй ууhа)<br /></p><p>Отец: <a href="p80.html?s=40e5bd3c35ef38b9">Иван</a><br />Жена: <a href="p79.html?s=40e5bd3c35ef38b9">Александра Николаевна Блохырова</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p69.html?s=40e5bd3c35ef38b9">Гаврил Дмитриевич Былахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p81.html?s=40e5bd3c35ef38b9">Луха</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p82.html?s=40e5bd3c35ef38b9">Хабырыылла</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p83.html?s=40e5bd3c35ef38b9">Дьэбдьиэй</a><br /></p>
+<p>Родился: ?<br />Умер: ?<br />(1-Дьохсо5он, Туокэй ууhа)<br /></p><p>Отец: <a href="p80.html?s=40e67b3a001d5877">Иван</a><br />Жена: <a href="p79.html?s=40e67b3a001d5877">Александра Николаевна Блохырова</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p69.html?s=40e67b3a001d5877">Гаврил Дмитриевич Былахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p81.html?s=40e67b3a001d5877">Луха Дмитриевич Блохыров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p82.html?s=40e67b3a001d5877">Хабырыылла Дмитриевич Блохыров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p83.html?s=40e67b3a001d5877">Дьэбдьиэй Дмитриевна (Блохырова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
