--- a/index.html.files/p79.html
+++ b/index.html.files/p79.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g275'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g737'}, "*");
 </script>
 <div class="cwrap">
 <h1>Александра Николаевна Блохырова</h1>
-<p>Умерла: ?<br /></p><p>Муж: <a href="p78.html?s=40e5bd3c35ef38b9">Дмитрий Иванович Блохыров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p69.html?s=40e5bd3c35ef38b9">Гаврил Дмитриевич Былахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p81.html?s=40e5bd3c35ef38b9">Луха</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p82.html?s=40e5bd3c35ef38b9">Хабырыылла</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p83.html?s=40e5bd3c35ef38b9">Дьэбдьиэй</a><br /></p>
+<p>Умерла: ?<br /></p><p>Муж: <a href="p78.html?s=40e67b3a001d5877">Дмитрий Иванович Блохыров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p69.html?s=40e67b3a001d5877">Гаврил Дмитриевич Былахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p81.html?s=40e67b3a001d5877">Луха Дмитриевич Блохыров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p82.html?s=40e67b3a001d5877">Хабырыылла Дмитриевич Блохыров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p83.html?s=40e67b3a001d5877">Дьэбдьиэй Дмитриевна (Блохырова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
