--- a/index.html.files/p82.html
+++ b/index.html.files/p82.html
@@ -32,11 +32,11 @@ a:hover, a:visited { text-decoration: none; }
 window.parent.postMessage({event_id: 'gmsg', data: 'g29'}, "*");
 </script>
 <div class="cwrap">
-<h1>Хабырыылла</h1>
-<p>Родился: ?<br />Умер: ?<br /></p><p>Отец: <a href="p78.html?s=40e5bd3c35ef38b9">Дмитрий Иванович Блохыров</a><br />Мать: <a href="p79.html?s=40e5bd3c35ef38b9">Александра Николаевна Блохырова</a><br />Брат: <a href="p69.html?s=40e5bd3c35ef38b9">Гаврил Дмитриевич Былахиров</a><br />Брат: <a href="p81.html?s=40e5bd3c35ef38b9">Луха</a><br />Брат: <a href="p83.html?s=40e5bd3c35ef38b9">Дьэбдьиэй</a><br /></p>
+<h1>Хабырыылла Дмитриевич Блохыров</h1>
+<p>Родился: ?<br />Умер: ?<br /></p><p>Отец: <a href="p78.html?s=40e67b3a001d5877">Дмитрий Иванович Блохыров</a><br />Мать: <a href="p79.html?s=40e67b3a001d5877">Александра Николаевна Блохырова</a><br />Брат: <a href="p69.html?s=40e67b3a001d5877">Гаврил Дмитриевич Былахиров</a><br />Брат: <a href="p81.html?s=40e67b3a001d5877">Луха Дмитриевич Блохыров</a><br />Сестра: <a href="p83.html?s=40e67b3a001d5877">Дьэбдьиэй Дмитриевна (Блохырова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
