--- a/index.html.files/p85.html
+++ b/index.html.files/p85.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g355'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g817'}, "*");
 </script>
 <div class="cwrap">
 <h1>Иосиф Терентьевич Дайбанныров</h1>
-<p>Родился: 1900<br />Умер: 31.03.1945<br />Продолжительность жизни: 45<br /></p><p>Отец: <a href="p91.html?s=40e5bd3c35ef38b9">Терентий Семенович Дайбанныров</a><br />Мать: <a href="p92.html?s=40e5bd3c35ef38b9">Татьяна Давыдовна Дайбаннырова</a><br />Брат: <a href="p93.html?s=40e5bd3c35ef38b9">Афанасий Дайбанныров</a><br />Брат: <a href="p94.html?s=40e5bd3c35ef38b9">Петр Дайбанныров</a><br />Брат: <a href="p95.html?s=40e5bd3c35ef38b9">Константин Дайбанныров</a><br />Жена: <a href="p86.html?s=40e5bd3c35ef38b9">Анисия Ивановна Татаринова</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p87.html?s=40e5bd3c35ef38b9">Владимир Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p68.html?s=40e5bd3c35ef38b9">Мария Дайбаннырова</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p88.html?s=40e5bd3c35ef38b9">Александра Назарова</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p89.html?s=40e5bd3c35ef38b9">Евдокия Наумова</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p90.html?s=40e5bd3c35ef38b9">Владимир Дайбанныров</a><br /></p>
+<p>Родился: 1900<br />Умер: 31.03.1945<br />Род: Дайбанныровы<br />Продолжительность жизни: 45<br /></p><p>Отец: <a href="p91.html?s=40e67b3a001d5877">Терентий Семенович Дайбанныров</a><br />Мать: <a href="p92.html?s=40e67b3a001d5877">Татьяна Давыдовна Дайбаннырова</a><br />Брат: <a href="p93.html?s=40e67b3a001d5877">Афанасий Терентьевич Дайбанныров</a><br />Брат: <a href="p94.html?s=40e67b3a001d5877">Петр Терентьевич Дайбанныров</a><br />Брат: <a href="p95.html?s=40e67b3a001d5877">Константин Терентьевич Дайбанныров</a><br />Жена: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p87.html?s=40e67b3a001d5877">Владимир Иосифович Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p68.html?s=40e67b3a001d5877">Мария Иосифна Дайбаннырова</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p88.html?s=40e67b3a001d5877">Александра Иосифовна Назарова</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p89.html?s=40e67b3a001d5877">Евдокия Иосифовна Наумова</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p90.html?s=40e67b3a001d5877">Владимир Иосифович Дайбанныров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
