--- a/index.html.files/p86.html
+++ b/index.html.files/p86.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g435'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g897'}, "*");
 </script>
 <div class="cwrap">
 <h1>Анисия Ивановна Татаринова</h1>
-<p>Родилась: 02.12.1904<br />Умерла: 1943<br />Продолжительность жизни: 38<br /></p><p>Отец: <a href="p101.html?s=40e5bd3c35ef38b9">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e5bd3c35ef38b9">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e5bd3c35ef38b9">Устиния (Татаринов)</a><br />Брат: <a href="p110.html?s=40e5bd3c35ef38b9">Феодул</a><br />Сестра: <a href="p107.html?s=40e5bd3c35ef38b9">Васса</a><br />Сестра: <a href="p108.html?s=40e5bd3c35ef38b9">Евфимия</a><br />Сестра: <a href="p109.html?s=40e5bd3c35ef38b9">Александра</a><br />Муж: <a href="p85.html?s=40e5bd3c35ef38b9">Иосиф Терентьевич Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p87.html?s=40e5bd3c35ef38b9">Владимир Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p68.html?s=40e5bd3c35ef38b9">Мария Дайбаннырова</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p88.html?s=40e5bd3c35ef38b9">Александра Назарова</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p89.html?s=40e5bd3c35ef38b9">Евдокия Наумова</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p90.html?s=40e5bd3c35ef38b9">Владимир Дайбанныров</a><br /></p>
+<p>Родилась: 02.12.1904<br />Умерла: 1943<br />Продолжительность жизни: 38<br /></p><p>Отец: <a href="p101.html?s=40e67b3a001d5877">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />Брат: <a href="p110.html?s=40e67b3a001d5877">Феодул Иванович Татаринов</a><br />Сестра: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />Сестра: <a href="p108.html?s=40e67b3a001d5877">Евфимия Ивановна (Татаринова)</a><br />Сестра: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br />Муж: <a href="p85.html?s=40e67b3a001d5877">Иосиф Терентьевич Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p87.html?s=40e67b3a001d5877">Владимир Иосифович Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p68.html?s=40e67b3a001d5877">Мария Иосифна Дайбаннырова</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p88.html?s=40e67b3a001d5877">Александра Иосифовна Назарова</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p89.html?s=40e67b3a001d5877">Евдокия Иосифовна Наумова</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p90.html?s=40e67b3a001d5877">Владимир Иосифович Дайбанныров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
