--- a/index.html.files/p91.html
+++ b/index.html.files/p91.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g351'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g813'}, "*");
 </script>
 <div class="cwrap">
 <h1>Терентий Семенович Дайбанныров</h1>
-<p>Родился: 1871<br />Умер: 1908<br />Продолжительность жизни: 37<br /></p><p>Отец: <a href="p96.html?s=40e5bd3c35ef38b9">Семен Иванович Дайбанныров</a><br />Мать: <a href="p97.html?s=40e5bd3c35ef38b9">Евдокия Андреевна Дайбаннырова</a><br />Брат: <a href="p99.html?s=40e5bd3c35ef38b9">Егор Дайбанныров</a><br />Жена: <a href="p92.html?s=40e5bd3c35ef38b9">Татьяна Давыдовна Дайбаннырова</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p85.html?s=40e5bd3c35ef38b9">Иосиф Терентьевич Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p93.html?s=40e5bd3c35ef38b9">Афанасий Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p94.html?s=40e5bd3c35ef38b9">Петр Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p95.html?s=40e5bd3c35ef38b9">Константин Дайбанныров</a><br /></p>
+<p>Родился: 1871<br />Умер: 1908<br />Продолжительность жизни: 37<br /></p><p>Отец: <a href="p96.html?s=40e67b3a001d5877">Семен Иванович Дайбанныров</a><br />Мать: <a href="p97.html?s=40e67b3a001d5877">Евдокия Андреевна Дайбаннырова</a><br />Брат: <a href="p99.html?s=40e67b3a001d5877">Егор Дайбанныров</a><br />Жена: <a href="p92.html?s=40e67b3a001d5877">Татьяна Давыдовна Дайбаннырова</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p85.html?s=40e67b3a001d5877">Иосиф Терентьевич Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p93.html?s=40e67b3a001d5877">Афанасий Терентьевич Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p94.html?s=40e67b3a001d5877">Петр Терентьевич Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p95.html?s=40e67b3a001d5877">Константин Терентьевич Дайбанныров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
