--- a/index.html.files/p92.html
+++ b/index.html.files/p92.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g400'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g862'}, "*");
 </script>
 <div class="cwrap">
 <h1>Татьяна Давыдовна Дайбаннырова</h1>
-<p>Родилась: 1870<br />Умерла: 1943<br />Продолжительность жизни: 73<br /></p><p>Отец: <a href="p98.html?s=40e5bd3c35ef38b9">Давид</a><br />Муж: <a href="p91.html?s=40e5bd3c35ef38b9">Терентий Семенович Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p85.html?s=40e5bd3c35ef38b9">Иосиф Терентьевич Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p93.html?s=40e5bd3c35ef38b9">Афанасий Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p94.html?s=40e5bd3c35ef38b9">Петр Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p95.html?s=40e5bd3c35ef38b9">Константин Дайбанныров</a><br /></p>
+<p>Родилась: 1870<br />Умерла: 1943<br />Продолжительность жизни: 73<br /></p><p>Отец: <a href="p98.html?s=40e67b3a001d5877">Давид</a><br />Муж: <a href="p91.html?s=40e67b3a001d5877">Терентий Семенович Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p85.html?s=40e67b3a001d5877">Иосиф Терентьевич Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p93.html?s=40e67b3a001d5877">Афанасий Терентьевич Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p94.html?s=40e67b3a001d5877">Петр Терентьевич Дайбанныров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p95.html?s=40e67b3a001d5877">Константин Терентьевич Дайбанныров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
