--- a/index.html.files/p10.html
+++ b/index.html.files/p10.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g104'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g564'}, "*");
 </script>
 <div class="cwrap">
-<h1>Тимур Блахиров</h1>
-<p>Родился: 03.06.2005<br />Возраст: 16<br /></p><p>Отец: <a href="p2.html?s=40e5bd3c35ef38b9">Виктор Блахиров</a><br />Мать: <a href="p7.html?s=40e5bd3c35ef38b9">Луиза Олеговна Блахирова (Ючюгяева)</a><br />Брат: <a href="p9.html?s=40e5bd3c35ef38b9">Роман Блахиров</a><br /></p>
+<h1>Тимур Викторович Блахиров</h1>
+<p>Родился: 03.06.2005<br />Возраст: 20<br /></p><p>Отец: <a href="p2.html?s=40e67b3a001d5877">Виктор Гаврильевич Блахиров</a><br />Мать: <a href="p7.html?s=40e67b3a001d5877">Луиза Олеговна Блахирова (Ючюгяева)</a><br />Брат: <a href="p9.html?s=40e67b3a001d5877">Роман Викторович Блахиров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
