--- a/index.html.files/p101.html
+++ b/index.html.files/p101.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g415'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g877'}, "*");
 </script>
 <div class="cwrap">
 <h1>Иван Семенович Татаринов</h1>
-<p>Родился: ?<br />Умер: ?<br />Род: Дайбанныровы<br /></p><p>Отец: <a href="p103.html?s=40e5bd3c35ef38b9">Хаакый Сэмэн</a><br />Сестра: <a href="p111.html?s=40e5bd3c35ef38b9">Александра</a><br />Жена: <a href="p106.html?s=40e5bd3c35ef38b9">Дьэбдьиэ</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p105.html?s=40e5bd3c35ef38b9">Устиния (Татаринов)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p110.html?s=40e5bd3c35ef38b9">Феодул</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p107.html?s=40e5bd3c35ef38b9">Васса</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p108.html?s=40e5bd3c35ef38b9">Евфимия</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p86.html?s=40e5bd3c35ef38b9">Анисия Ивановна Татаринова</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p109.html?s=40e5bd3c35ef38b9">Александра</a><br /></p>
+<p>Родился: ?<br />Умер: ?<br />Род: Дайбанныровы<br /></p><p>Отец: <a href="p103.html?s=40e67b3a001d5877">Хаакый Сэмэн</a><br />Сестра: <a href="p111.html?s=40e67b3a001d5877">Александра</a><br />Жена: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p110.html?s=40e67b3a001d5877">Феодул Иванович Татаринов</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p108.html?s=40e67b3a001d5877">Евфимия Ивановна (Татаринова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
