--- a/index.html.files/p14.html
+++ b/index.html.files/p14.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g123'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g583'}, "*");
 </script>
 <div class="cwrap">
 <h1>Егор Блахиров</h1>
-<p>Родился: 11.07.1985<br />Возраст: 36<br /></p><p>Отец: <a href="p11.html?s=40e5bd3c35ef38b9">Егор Блахиров</a><br />Мать: <a href="p12.html?s=40e5bd3c35ef38b9">Валентина Викторовна Блахирова (Афанасьева)</a><br />Сестра: <a href="p19.html?s=40e5bd3c35ef38b9">Мария Тарасова (Блахирова)</a><br />Жена: <a href="p23.html?s=40e5bd3c35ef38b9">Виталина Семеновна Блахирова (Апросимова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p17.html?s=40e5bd3c35ef38b9">Динара</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p18.html?s=40e5bd3c35ef38b9">Тамила</a><br /></p>
+<p>Родился: 11.07.1985<br />Род: Блахировы<br />Возраст: 40<br /></p><p>Отец: <a href="p11.html?s=40e67b3a001d5877">Егор Кузьмич Блахиров</a><br />Мать: <a href="p12.html?s=40e67b3a001d5877">Валентина Викторовна Блахирова (Афанасьева)</a><br />Сестра: <a href="p19.html?s=40e67b3a001d5877">Мария Тарасова (Блахирова)</a><br />Жена: <a href="p23.html?s=40e67b3a001d5877">Виталина Семеновна Блахирова (Апросимова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p17.html?s=40e67b3a001d5877">Динара (Федорова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p18.html?s=40e67b3a001d5877">Тамила Егоровна (Блахирова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
