--- a/index.html.files/p17.html
+++ b/index.html.files/p17.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g138'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g598'}, "*");
 </script>
 <div class="cwrap">
-<h1>Динара</h1>
-<p>Родилась: 22.09.2006<br />Возраст: 15<br /></p><p>Отец: <a href="p14.html?s=40e5bd3c35ef38b9">Егор Блахиров</a><br />Мать: <a href="p23.html?s=40e5bd3c35ef38b9">Виталина Семеновна Блахирова (Апросимова)</a><br />Сестра: <a href="p18.html?s=40e5bd3c35ef38b9">Тамила</a><br /></p>
+<h1>Динара (Федорова)</h1>
+<p>Родилась: 22.09.2006<br />Возраст: 19<br /></p><p>Отец: <a href="p14.html?s=40e67b3a001d5877">Егор Блахиров</a><br />Мать: <a href="p23.html?s=40e67b3a001d5877">Виталина Семеновна Блахирова (Апросимова)</a><br />Сестра: <a href="p18.html?s=40e67b3a001d5877">Тамила Егоровна (Блахирова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
