--- a/index.html.files/p19.html
+++ b/index.html.files/p19.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g118'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g578'}, "*");
 </script>
 <div class="cwrap">
 <h1>Мария Тарасова (Блахирова)</h1>
-<p>Родилась: 22.06.1978<br />Возраст: 43<br /></p><p>Отец: <a href="p11.html?s=40e5bd3c35ef38b9">Егор Блахиров</a><br />Мать: <a href="p12.html?s=40e5bd3c35ef38b9">Валентина Викторовна Блахирова (Афанасьева)</a><br />Брат: <a href="p14.html?s=40e5bd3c35ef38b9">Егор Блахиров</a><br />Муж: <a href="p20.html?s=40e5bd3c35ef38b9">Петр Тарасов</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p21.html?s=40e5bd3c35ef38b9">Айыына</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p22.html?s=40e5bd3c35ef38b9">Уйгулаана</a><br /></p>
+<p>Родилась: 22.06.1978<br />Род: Блахировы<br />Возраст: 47<br /></p><p>Отец: <a href="p11.html?s=40e67b3a001d5877">Егор Кузьмич Блахиров</a><br />Мать: <a href="p12.html?s=40e67b3a001d5877">Валентина Викторовна Блахирова (Афанасьева)</a><br />Брат: <a href="p14.html?s=40e67b3a001d5877">Егор Блахиров</a><br />Муж: <a href="p20.html?s=40e67b3a001d5877">Петр Николаевич Тарасов</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p21.html?s=40e67b3a001d5877">Айыына Петровна Тарасова</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p22.html?s=40e67b3a001d5877">Уйгулаана Петровна (Тарасова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
