--- a/index.html.files/p21.html
+++ b/index.html.files/p21.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g129'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g589'}, "*");
 </script>
 <div class="cwrap">
-<h1>Айыына</h1>
-<p>Родилась: 01.09.2009<br />Возраст: 12<br /></p><p>Отец: <a href="p20.html?s=40e5bd3c35ef38b9">Петр Тарасов</a><br />Мать: <a href="p19.html?s=40e5bd3c35ef38b9">Мария Тарасова (Блахирова)</a><br />Сестра: <a href="p22.html?s=40e5bd3c35ef38b9">Уйгулаана</a><br /></p>
+<h1>Айыына Петровна Тарасова</h1>
+<p>Родилась: 01.09.2009<br />Возраст: 16<br /></p><p>Отец: <a href="p20.html?s=40e67b3a001d5877">Петр Николаевич Тарасов</a><br />Мать: <a href="p19.html?s=40e67b3a001d5877">Мария Тарасова (Блахирова)</a><br />Сестра: <a href="p22.html?s=40e67b3a001d5877">Уйгулаана Петровна (Тарасова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
