--- a/index.html.files/p26.html
+++ b/index.html.files/p26.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g168'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g628'}, "*");
 </script>
 <div class="cwrap">
 <h1>Алексей Блахиров</h1>
-<p>Родился: 07.12.1984<br />Возраст: 36<br /></p><p>Отец: <a href="p24.html?s=40e5bd3c35ef38b9">Николай Блахиров</a><br />Мать: <a href="p25.html?s=40e5bd3c35ef38b9">Валентина Алексеевна Блахирова (Баланова)</a><br />Брат: <a href="p27.html?s=40e5bd3c35ef38b9">Николай Блахиров</a><br />Сестра: <a href="p28.html?s=40e5bd3c35ef38b9">Ньургуйаана Владимирова (Блахирова)</a><br />Сестра: <a href="p29.html?s=40e5bd3c35ef38b9">Александра Егоровна Мохначевская</a><br />Жена: <a href="p30.html?s=40e5bd3c35ef38b9">Анна Игнатьевна Блахирова (Соловьева)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p33.html?s=40e5bd3c35ef38b9">Дьулуур</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p34.html?s=40e5bd3c35ef38b9">Мичил</a><br /></p>
+<p>Родился: 07.12.1984<br />Род: Блахировы<br />Возраст: 41<br /></p><p>Отец: <a href="p24.html?s=40e67b3a001d5877">Николай Блахиров</a><br />Мать: <a href="p25.html?s=40e67b3a001d5877">Валентина Алексеевна Блахирова (Баланова)</a><br />Брат: <a href="p27.html?s=40e67b3a001d5877">Николай Блахиров</a><br />Сестра: <a href="p28.html?s=40e67b3a001d5877">Ньургуйаана Владимирова (Блахирова)</a><br />Сестра: <a href="p29.html?s=40e67b3a001d5877">Александра Егоровна Мохначевская</a><br />Жена: <a href="p30.html?s=40e67b3a001d5877">Анна Игнатьевна Блахирова (Соловьева)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p33.html?s=40e67b3a001d5877">Дьулуур Алексеевич Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p34.html?s=40e67b3a001d5877">Мичил Алексеевич Блахиров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
