--- a/index.html.files/p35.html
+++ b/index.html.files/p35.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g197'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g657'}, "*");
 </script>
 <div class="cwrap">
-<h1>Нарыйа</h1>
-<p>Родилась: 29.03.2009<br />Возраст: 12<br /></p><p>Отец: <a href="p27.html?s=40e5bd3c35ef38b9">Николай Блахиров</a><br />Мать: <a href="p31.html?s=40e5bd3c35ef38b9">Екатерина Андреевна Блахирова</a><br />Сестра: <a href="p36.html?s=40e5bd3c35ef38b9">Айталыына</a><br />Сестра: <a href="p37.html?s=40e5bd3c35ef38b9">Сайыына</a><br /></p>
+<h1>Нарыйа Николаевна (Блахирова)</h1>
+<p>Родилась: 29.03.2009<br />Возраст: 16<br /></p><p>Отец: <a href="p27.html?s=40e67b3a001d5877">Николай Блахиров</a><br />Мать: <a href="p31.html?s=40e67b3a001d5877">Екатерина Николаевна Блахирова (Андреева)</a><br />Сестра: <a href="p36.html?s=40e67b3a001d5877">Айталыына Николаевна Блахирова</a><br />Сестра: <a href="p37.html?s=40e67b3a001d5877">Сайыына Николаевна (Блахирова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
