--- a/index.html.files/p39.html
+++ b/index.html.files/p39.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g214'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g674'}, "*");
 </script>
 <div class="cwrap">
-<h1>Сардаана</h1>
-<p>Родилась: 04.06.2018<br />Возраст: 3<br /></p><p>Отец: <a href="p32.html?s=40e5bd3c35ef38b9">Александр Александрович Владимиров</a><br />Мать: <a href="p28.html?s=40e5bd3c35ef38b9">Ньургуйаана Владимирова (Блахирова)</a><br />Брат: <a href="p38.html?s=40e5bd3c35ef38b9">Айсиэн Владимиров</a><br /></p>
+<h1>Сардаана Александровна (Владимирова)</h1>
+<p>Родилась: 04.06.2018<br />Возраст: 7<br /></p><p>Отец: <a href="p32.html?s=40e67b3a001d5877">Александр Александрович Владимиров</a><br />Мать: <a href="p28.html?s=40e67b3a001d5877">Ньургуйаана Владимирова (Блахирова)</a><br />Брат: <a href="p38.html?s=40e67b3a001d5877">Айсиэн Александрович Владимиров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
