--- a/index.html.files/p4.html
+++ b/index.html.files/p4.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g113'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g573'}, "*");
 </script>
 <div class="cwrap">
-<h1>Артур Блахиров</h1>
-<p>Родился: 05.09.2013<br />Возраст: 8<br /></p><p>Мать: <a href="p3.html?s=40e5bd3c35ef38b9">Валентина Блахирова</a><br /></p>
+<h1>Артур Рустамович Блахиров</h1>
+<p>Родился: 05.09.2013<br />Возраст: 12<br /></p><p>Мать: <a href="p3.html?s=40e67b3a001d5877">Валентина Гавриловна Блахирова</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
