--- a/index.html.files/p40.html
+++ b/index.html.files/p40.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g73'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g535'}, "*");
 </script>
 <div class="cwrap">
-<h1>Василий Блахиров</h1>
-<p>Родился: 01.07.1962<br />Род: Блахировы<br />Возраст: 59<br /></p><p>Отец: <a href="p5.html?s=40e5bd3c35ef38b9">Кузьма Блахиров</a><br />Мать: <a href="p68.html?s=40e5bd3c35ef38b9">Мария Дайбаннырова</a><br />Брат: <a href="p1.html?s=40e5bd3c35ef38b9">Гаврил Блахиров</a><br />Брат: <a href="p11.html?s=40e5bd3c35ef38b9">Егор Блахиров</a><br />Сестра: <a href="p59.html?s=40e5bd3c35ef38b9">Парасковья Богдокумова (Блахирова)</a><br />Брат: <a href="p24.html?s=40e5bd3c35ef38b9">Николай Блахиров</a><br />Брат: <a href="p47.html?s=40e5bd3c35ef38b9">Митрофан Блахиров</a><br />Брат: <a href="p67.html?s=40e5bd3c35ef38b9">Кузьма Блахиров</a><br />Жена: <a href="p41.html?s=40e5bd3c35ef38b9">Виктория Ивановна Блахирова (Кривошапкина)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p42.html?s=40e5bd3c35ef38b9">Семен</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p43.html?s=40e5bd3c35ef38b9">Туяра Иванова (Блахирова)</a><br /></p>
+<h1>Василий Кузьмич Блахиров</h1>
+<p>Родился: 01.07.1962<br />Род: Блахировы<br />Возраст: 63<br /></p><p>Отец: <a href="p5.html?s=40e67b3a001d5877">Кузьма Гаврильевич Былахиров</a><br />Мать: <a href="p68.html?s=40e67b3a001d5877">Мария Иосифна Дайбаннырова</a><br />Брат: <a href="p1.html?s=40e67b3a001d5877">Гаврил Кузьмич Блахиров</a><br />Брат: <a href="p11.html?s=40e67b3a001d5877">Егор Кузьмич Блахиров</a><br />Сестра: <a href="p59.html?s=40e67b3a001d5877">Парасковья Богдокумова (Блахирова)</a><br />Брат: <a href="p24.html?s=40e67b3a001d5877">Николай Блахиров</a><br />Брат: <a href="p47.html?s=40e67b3a001d5877">Митрофан Кузьмич Былахиров</a><br />Брат: <a href="p67.html?s=40e67b3a001d5877">Кузьма Кузьмич Блахиров</a><br />Жена: <a href="p41.html?s=40e67b3a001d5877">Виктория Ивановна Блахирова (Кривошапкина)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p42.html?s=40e67b3a001d5877">Семен Васильевич Блахиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p43.html?s=40e67b3a001d5877">Туйаара Иванова (Блахирова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
