--- a/index.html.files/p41.html
+++ b/index.html.files/p41.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g74'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g536'}, "*");
 </script>
 <div class="cwrap">
 <h1>Виктория Ивановна Блахирова (Кривошапкина)</h1>
-<p>Родилась: 02.08.1964<br />Возраст: 57<br /></p><p>Муж: <a href="p40.html?s=40e5bd3c35ef38b9">Василий Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p42.html?s=40e5bd3c35ef38b9">Семен</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p43.html?s=40e5bd3c35ef38b9">Туяра Иванова (Блахирова)</a><br /></p>
+<p>Родилась: 02.08.1964<br />Возраст: 61<br /></p><p>Муж: <a href="p40.html?s=40e67b3a001d5877">Василий Кузьмич Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p42.html?s=40e67b3a001d5877">Семен Васильевич Блахиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p43.html?s=40e67b3a001d5877">Туйаара Иванова (Блахирова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
