--- a/index.html.files/p42.html
+++ b/index.html.files/p42.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g219'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g679'}, "*");
 </script>
 <div class="cwrap">
-<h1>Семен</h1>
-<p>Родился: 29.01.1988<br />Возраст: 33<br /></p><p>Отец: <a href="p40.html?s=40e5bd3c35ef38b9">Василий Блахиров</a><br />Мать: <a href="p41.html?s=40e5bd3c35ef38b9">Виктория Ивановна Блахирова (Кривошапкина)</a><br />Сестра: <a href="p43.html?s=40e5bd3c35ef38b9">Туяра Иванова (Блахирова)</a><br /></p>
+<h1>Семен Васильевич Блахиров</h1>
+<p>Родился: 29.01.1988<br />Род: Блахировы<br />Возраст: 37<br /></p><p>Отец: <a href="p40.html?s=40e67b3a001d5877">Василий Кузьмич Блахиров</a><br />Мать: <a href="p41.html?s=40e67b3a001d5877">Виктория Ивановна Блахирова (Кривошапкина)</a><br />Сестра: <a href="p43.html?s=40e67b3a001d5877">Туйаара Иванова (Блахирова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
