--- a/index.html.files/p44.html
+++ b/index.html.files/p44.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g224'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g684'}, "*");
 </script>
 <div class="cwrap">
 <h1>Григорий Александрович Иванов</h1>
-<p>Родился: 27.04.1992<br />Возраст: 29<br /></p><p>Жена: <a href="p43.html?s=40e5bd3c35ef38b9">Туяра Иванова (Блахирова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p45.html?s=40e5bd3c35ef38b9">Нарыйаана</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p46.html?s=40e5bd3c35ef38b9">Кэрэчээнэ</a><br /></p>
+<p>Родился: 27.04.1992<br />Возраст: 33<br /></p><p>Жена: <a href="p43.html?s=40e67b3a001d5877">Туйаара Иванова (Блахирова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p45.html?s=40e67b3a001d5877">Нарыйаана Григорьевна (Иванова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p46.html?s=40e67b3a001d5877">Кэрэчээнэ Григорьевна (Иванова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
