--- a/index.html.files/p46.html
+++ b/index.html.files/p46.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g233'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g693'}, "*");
 </script>
 <div class="cwrap">
-<h1>Кэрэчээнэ</h1>
-<p>Родилась: 17.03.2019<br />Возраст: 2<br /></p><p>Отец: <a href="p44.html?s=40e5bd3c35ef38b9">Григорий Александрович Иванов</a><br />Мать: <a href="p43.html?s=40e5bd3c35ef38b9">Туяра Иванова (Блахирова)</a><br />Сестра: <a href="p45.html?s=40e5bd3c35ef38b9">Нарыйаана</a><br /></p>
+<h1>Кэрэчээнэ Григорьевна (Иванова)</h1>
+<p>Родилась: 17.03.2019<br />Возраст: 6<br /></p><p>Отец: <a href="p44.html?s=40e67b3a001d5877">Григорий Александрович Иванов</a><br />Мать: <a href="p43.html?s=40e67b3a001d5877">Туйаара Иванова (Блахирова)</a><br />Сестра: <a href="p45.html?s=40e67b3a001d5877">Нарыйаана Григорьевна (Иванова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
