--- a/index.html.files/p47.html
+++ b/index.html.files/p47.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g78'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g540'}, "*");
 </script>
 <div class="cwrap">
-<h1>Митрофан Блахиров</h1>
-<p>Родился: 02.04.1965<br />Род: Блахировы<br />Возраст: 56<br /></p><p>Отец: <a href="p5.html?s=40e5bd3c35ef38b9">Кузьма Блахиров</a><br />Мать: <a href="p68.html?s=40e5bd3c35ef38b9">Мария Дайбаннырова</a><br />Брат: <a href="p1.html?s=40e5bd3c35ef38b9">Гаврил Блахиров</a><br />Брат: <a href="p11.html?s=40e5bd3c35ef38b9">Егор Блахиров</a><br />Сестра: <a href="p59.html?s=40e5bd3c35ef38b9">Парасковья Богдокумова (Блахирова)</a><br />Брат: <a href="p24.html?s=40e5bd3c35ef38b9">Николай Блахиров</a><br />Брат: <a href="p40.html?s=40e5bd3c35ef38b9">Василий Блахиров</a><br />Брат: <a href="p67.html?s=40e5bd3c35ef38b9">Кузьма Блахиров</a><br />Жена: <a href="p48.html?s=40e5bd3c35ef38b9">Зоя Викторовна Блахирова (Слепцова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p49.html?s=40e5bd3c35ef38b9">Мария Ананьева (Блахирова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p51.html?s=40e5bd3c35ef38b9">Виктория Блахирова</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p52.html?s=40e5bd3c35ef38b9">Кузьма Блахиров</a><br /></p>
+<h1>Митрофан Кузьмич Былахиров</h1>
+<p>Родился: 02.04.1965<br />Род: Блахировы<br />Возраст: 60<br /></p><p>Отец: <a href="p5.html?s=40e67b3a001d5877">Кузьма Гаврильевич Былахиров</a><br />Мать: <a href="p68.html?s=40e67b3a001d5877">Мария Иосифна Дайбаннырова</a><br />Брат: <a href="p1.html?s=40e67b3a001d5877">Гаврил Кузьмич Блахиров</a><br />Брат: <a href="p11.html?s=40e67b3a001d5877">Егор Кузьмич Блахиров</a><br />Сестра: <a href="p59.html?s=40e67b3a001d5877">Парасковья Богдокумова (Блахирова)</a><br />Брат: <a href="p24.html?s=40e67b3a001d5877">Николай Блахиров</a><br />Брат: <a href="p40.html?s=40e67b3a001d5877">Василий Кузьмич Блахиров</a><br />Брат: <a href="p67.html?s=40e67b3a001d5877">Кузьма Кузьмич Блахиров</a><br />Жена: <a href="p48.html?s=40e67b3a001d5877">Зоя Викторовна Былахирова (Слепцова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p49.html?s=40e67b3a001d5877">Мария Ананьева (Былахирова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p51.html?s=40e67b3a001d5877">Виктория Санникова (Былахирова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p52.html?s=40e67b3a001d5877">Кузьма Былахиров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
