--- a/index.html.files/p54.html
+++ b/index.html.files/p54.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g270'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g732'}, "*");
 </script>
 <div class="cwrap">
-<h1>Тимир</h1>
-<p>Родился: 10.02.2016<br />Возраст: 5<br /></p><p>Мать: <a href="p51.html?s=40e5bd3c35ef38b9">Виктория Блахирова</a><br />Сестра: <a href="p53.html?s=40e5bd3c35ef38b9">Сайаана</a><br /></p>
+<h1>Тимир Александрович Борисов</h1>
+<p>Родился: 10.02.2016<br />Возраст: 9<br /></p><p>Мать: <a href="p51.html?s=40e67b3a001d5877">Виктория Санникова (Былахирова)</a><br />Единоутробная сестра: <a href="p53.html?s=40e67b3a001d5877">Сайаана Николаевна (Санникова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
