--- a/index.html.files/p57.html
+++ b/index.html.files/p57.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g257'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g719'}, "*");
 </script>
 <div class="cwrap">
-<h1>Мичийэ</h1>
-<p>Родилась: 22.02.2017<br />Возраст: 4<br /></p><p>Отец: <a href="p50.html?s=40e5bd3c35ef38b9">Ананий Парфенович Ананьев</a><br />Мать: <a href="p49.html?s=40e5bd3c35ef38b9">Мария Ананьева (Блахирова)</a><br />Брат: <a href="p55.html?s=40e5bd3c35ef38b9">Эрчимэн</a><br />Брат: <a href="p56.html?s=40e5bd3c35ef38b9">Алгыстаан</a><br /></p>
+<h1>Мичийэ Ананьевна (Ананьева)</h1>
+<p>Родилась: 22.02.2017<br />Возраст: 8<br /></p><p>Отец: <a href="p50.html?s=40e67b3a001d5877">Ананий Парфеньевич Ананьев</a><br />Мать: <a href="p49.html?s=40e67b3a001d5877">Мария Ананьева (Былахирова)</a><br />Брат: <a href="p55.html?s=40e67b3a001d5877">Эрчимэн Ананьевич Ананьев</a><br />Брат: <a href="p56.html?s=40e67b3a001d5877">Алгыстаан Ананьевич Ананьев</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
