--- a/index.html.files/p58.html
+++ b/index.html.files/p58.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g248'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g710'}, "*");
 </script>
 <div class="cwrap">
-<h1>Элеонора Эдуардовна Блахирова (Васильева)</h1>
-<p>Родилась: 05.07.1995<br />Возраст: 26<br /></p><p>Муж: <a href="p52.html?s=40e5bd3c35ef38b9">Кузьма Блахиров</a><br /></p>
+<h1>Элеонора Эдуардовна Былахирова (Васильева)</h1>
+<p>Родилась: 05.07.1995<br />Возраст: 30<br /></p><p>Муж: <a href="p52.html?s=40e67b3a001d5877">Кузьма Былахиров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
