--- a/index.html.files/p59.html
+++ b/index.html.files/p59.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g63'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g525'}, "*");
 </script>
 <div class="cwrap">
 <h1>Парасковья Богдокумова (Блахирова)</h1>
-<p>Родилась: 01.02.1956<br />Род: Блахировы<br />Возраст: 65<br /></p><p>Отец: <a href="p5.html?s=40e5bd3c35ef38b9">Кузьма Блахиров</a><br />Мать: <a href="p68.html?s=40e5bd3c35ef38b9">Мария Дайбаннырова</a><br />Брат: <a href="p1.html?s=40e5bd3c35ef38b9">Гаврил Блахиров</a><br />Брат: <a href="p11.html?s=40e5bd3c35ef38b9">Егор Блахиров</a><br />Брат: <a href="p24.html?s=40e5bd3c35ef38b9">Николай Блахиров</a><br />Брат: <a href="p40.html?s=40e5bd3c35ef38b9">Василий Блахиров</a><br />Брат: <a href="p47.html?s=40e5bd3c35ef38b9">Митрофан Блахиров</a><br />Брат: <a href="p67.html?s=40e5bd3c35ef38b9">Кузьма Блахиров</a><br />Муж: <a href="p60.html?s=40e5bd3c35ef38b9">Алексей Васильевич Богдокумов</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p61.html?s=40e5bd3c35ef38b9">Алексей Богдокумов</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p62.html?s=40e5bd3c35ef38b9">Анна Алексеевна Петрова (Богдокумова)</a><br /></p>
+<p>Родилась: 01.02.1956<br />Род: Блахировы<br />Возраст: 69<br /></p><p>Отец: <a href="p5.html?s=40e67b3a001d5877">Кузьма Гаврильевич Былахиров</a><br />Мать: <a href="p68.html?s=40e67b3a001d5877">Мария Иосифна Дайбаннырова</a><br />Брат: <a href="p1.html?s=40e67b3a001d5877">Гаврил Кузьмич Блахиров</a><br />Брат: <a href="p11.html?s=40e67b3a001d5877">Егор Кузьмич Блахиров</a><br />Брат: <a href="p24.html?s=40e67b3a001d5877">Николай Блахиров</a><br />Брат: <a href="p40.html?s=40e67b3a001d5877">Василий Кузьмич Блахиров</a><br />Брат: <a href="p47.html?s=40e67b3a001d5877">Митрофан Кузьмич Былахиров</a><br />Брат: <a href="p67.html?s=40e67b3a001d5877">Кузьма Кузьмич Блахиров</a><br />Муж: <a href="p60.html?s=40e67b3a001d5877">Алексей Васильевич Богдокумов</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p61.html?s=40e67b3a001d5877">Алексей Богдокумов</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p62.html?s=40e67b3a001d5877">Анна Алексеевна Петрова (Богдокумова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
