--- a/index.html.files/p61.html
+++ b/index.html.files/p61.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g147'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g607'}, "*");
 </script>
 <div class="cwrap">
 <h1>Алексей Богдокумов</h1>
-<p>Родился: 09.05.1990<br />Возраст: 31<br /></p><p>Отец: <a href="p60.html?s=40e5bd3c35ef38b9">Алексей Васильевич Богдокумов</a><br />Мать: <a href="p59.html?s=40e5bd3c35ef38b9">Парасковья Богдокумова (Блахирова)</a><br />Сестра: <a href="p62.html?s=40e5bd3c35ef38b9">Анна Алексеевна Петрова (Богдокумова)</a><br />Жена: <a href="p64.html?s=40e5bd3c35ef38b9">Айыына Петровна Богдокумова (Пестерева)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p65.html?s=40e5bd3c35ef38b9">Богдан</a><br />Дочь: <a href="p66.html?s=40e5bd3c35ef38b9">Аэлита</a><br /></p>
+<p>Родился: 09.05.1990<br />Возраст: 35<br /></p><p>Отец: <a href="p60.html?s=40e67b3a001d5877">Алексей Васильевич Богдокумов</a><br />Мать: <a href="p59.html?s=40e67b3a001d5877">Парасковья Богдокумова (Блахирова)</a><br />Сестра: <a href="p62.html?s=40e67b3a001d5877">Анна Алексеевна Петрова (Богдокумова)</a><br />Жена: <a href="p64.html?s=40e67b3a001d5877">Айыына Петровна Богдокумова (Пестерева)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p65.html?s=40e67b3a001d5877">Богдан Алексеевич Богдокумов</a><br />Дочь: <a href="p66.html?s=40e67b3a001d5877">Аэлита Алексеевна (Богдокумова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
