--- a/index.html.files/p64.html
+++ b/index.html.files/p64.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g149'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g609'}, "*");
 </script>
 <div class="cwrap">
 <h1>Айыына Петровна Богдокумова (Пестерева)</h1>
-<p>Родилась: 24.12.1990<br />Возраст: 30<br /></p><p>Муж: <a href="p61.html?s=40e5bd3c35ef38b9">Алексей Богдокумов</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p65.html?s=40e5bd3c35ef38b9">Богдан</a><br /></p>
+<p>Родилась: 24.12.1990<br />Возраст: 35<br /></p><p>Муж: <a href="p61.html?s=40e67b3a001d5877">Алексей Богдокумов</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p65.html?s=40e67b3a001d5877">Богдан Алексеевич Богдокумов</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
