--- a/index.html.files/p65.html
+++ b/index.html.files/p65.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g159'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g619'}, "*");
 </script>
 <div class="cwrap">
-<h1>Богдан</h1>
-<p>Родился: 27.08.2016<br />Возраст: 5<br /></p><p>Отец: <a href="p61.html?s=40e5bd3c35ef38b9">Алексей Богдокумов</a><br />Мать: <a href="p64.html?s=40e5bd3c35ef38b9">Айыына Петровна Богдокумова (Пестерева)</a><br />Единокровная сестра: <a href="p66.html?s=40e5bd3c35ef38b9">Аэлита</a><br /></p>
+<h1>Богдан Алексеевич Богдокумов</h1>
+<p>Родился: 27.08.2016<br />Возраст: 9<br /></p><p>Отец: <a href="p61.html?s=40e67b3a001d5877">Алексей Богдокумов</a><br />Мать: <a href="p64.html?s=40e67b3a001d5877">Айыына Петровна Богдокумова (Пестерева)</a><br />Единокровная сестра: <a href="p66.html?s=40e67b3a001d5877">Аэлита Алексеевна (Богдокумова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
