--- a/index.html.files/p68.html
+++ b/index.html.files/p68.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g47'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g510'}, "*");
 </script>
 <div class="cwrap">
-<h1>Мария Дайбаннырова</h1>
-<p>Родилась: 1929<br />Умерла: 07.03.1987<br />Род: Дайбанныровы<br />Продолжительность жизни: 58<br /></p><p>Отец: <a href="p85.html?s=40e5bd3c35ef38b9">Иосиф Терентьевич Дайбанныров</a><br />Мать: <a href="p86.html?s=40e5bd3c35ef38b9">Анисия Ивановна Татаринова</a><br />Брат: <a href="p87.html?s=40e5bd3c35ef38b9">Владимир Дайбанныров</a><br />Сестра: <a href="p88.html?s=40e5bd3c35ef38b9">Александра Назарова</a><br />Сестра: <a href="p89.html?s=40e5bd3c35ef38b9">Евдокия Наумова</a><br />Брат: <a href="p90.html?s=40e5bd3c35ef38b9">Владимир Дайбанныров</a><br />Муж: <a href="p5.html?s=40e5bd3c35ef38b9">Кузьма Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p1.html?s=40e5bd3c35ef38b9">Гаврил Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p11.html?s=40e5bd3c35ef38b9">Егор Блахиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p59.html?s=40e5bd3c35ef38b9">Парасковья Богдокумова (Блахирова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p24.html?s=40e5bd3c35ef38b9">Николай Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p40.html?s=40e5bd3c35ef38b9">Василий Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p47.html?s=40e5bd3c35ef38b9">Митрофан Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p67.html?s=40e5bd3c35ef38b9">Кузьма Блахиров</a><br /></p>
+<h1>Мария Иосифна Дайбаннырова</h1>
+<p>Родилась: 1929<br />Умерла: 07.03.1987<br />Род: Дайбанныровы<br />Продолжительность жизни: 58<br /></p><p>Отец: <a href="p85.html?s=40e67b3a001d5877">Иосиф Терентьевич Дайбанныров</a><br />Мать: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Брат: <a href="p87.html?s=40e67b3a001d5877">Владимир Иосифович Дайбанныров</a><br />Сестра: <a href="p88.html?s=40e67b3a001d5877">Александра Иосифовна Назарова</a><br />Сестра: <a href="p89.html?s=40e67b3a001d5877">Евдокия Иосифовна Наумова</a><br />Брат: <a href="p90.html?s=40e67b3a001d5877">Владимир Иосифович Дайбанныров</a><br />Муж: <a href="p5.html?s=40e67b3a001d5877">Кузьма Гаврильевич Былахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p1.html?s=40e67b3a001d5877">Гаврил Кузьмич Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p11.html?s=40e67b3a001d5877">Егор Кузьмич Блахиров</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p59.html?s=40e67b3a001d5877">Парасковья Богдокумова (Блахирова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p24.html?s=40e67b3a001d5877">Николай Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p40.html?s=40e67b3a001d5877">Василий Кузьмич Блахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p47.html?s=40e67b3a001d5877">Митрофан Кузьмич Былахиров</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p67.html?s=40e67b3a001d5877">Кузьма Кузьмич Блахиров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
