--- a/index.html.files/p71.html
+++ b/index.html.files/p71.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g286'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g748'}, "*");
 </script>
 <div class="cwrap">
 <h1>Христофор Большаков</h1>
-<p>Родился: ?<br />Умер: ?<br /></p><p>Отец: <a href="p113.html?s=40e5bd3c35ef38b9">?</a><br />Брат: <a href="p114.html?s=40e5bd3c35ef38b9">Федот</a><br />Брат: <a href="p115.html?s=40e5bd3c35ef38b9">Лааhар</a><br />Брат: <a href="p116.html?s=40e5bd3c35ef38b9">Токхай Дьогуордээн</a><br />Сын: <a href="p72.html?s=40e5bd3c35ef38b9">Алексей</a><br />Сын: <a href="p73.html?s=40e5bd3c35ef38b9">Христофор</a><br />Дочь: <a href="p74.html?s=40e5bd3c35ef38b9">Елена</a><br />Сын: <a href="p75.html?s=40e5bd3c35ef38b9">Михаил</a><br />Сын: <a href="p76.html?s=40e5bd3c35ef38b9">Николай</a><br />Сын: <a href="p77.html?s=40e5bd3c35ef38b9">Павел</a><br />Дочь: <a href="p70.html?s=40e5bd3c35ef38b9">Ульяна Христофоровна Большакова</a><br /></p>
+<p>Родился: ?<br />Умер: ?<br /></p><p>Отец: <a href="p113.html?s=40e67b3a001d5877">?</a><br />Брат: <a href="p114.html?s=40e67b3a001d5877">Федот</a><br />Брат: <a href="p115.html?s=40e67b3a001d5877">Лааhар</a><br />Брат: <a href="p116.html?s=40e67b3a001d5877">Тоххой Дьогуордээн</a><br />Сын: <a href="p72.html?s=40e67b3a001d5877">Алексей Христофорович Большаков</a><br />Сын: <a href="p73.html?s=40e67b3a001d5877">Христофор Христофорович Большаков</a><br />Дочь: <a href="p74.html?s=40e67b3a001d5877">Елена Христофоровна (Большакова)</a><br />Сын: <a href="p75.html?s=40e67b3a001d5877">Михаил Христофорович Большаков</a><br />Сын: <a href="p76.html?s=40e67b3a001d5877">Николай Христофорович Большаков</a><br />Сын: <a href="p77.html?s=40e67b3a001d5877">Павел Христофорович Большаков</a><br />Дочь: <a href="p70.html?s=40e67b3a001d5877">Ульяна Христофоровна Большакова</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
