--- a/index.html.files/p76.html
+++ b/index.html.files/p76.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g322'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g784'}, "*");
 </script>
 <div class="cwrap">
-<h1>Николай</h1>
-<p>Родился: ?<br />Умер: ?<br /></p><p>Отец: <a href="p71.html?s=40e5bd3c35ef38b9">Христофор Большаков</a><br />Брат: <a href="p72.html?s=40e5bd3c35ef38b9">Алексей</a><br />Брат: <a href="p73.html?s=40e5bd3c35ef38b9">Христофор</a><br />Сестра: <a href="p74.html?s=40e5bd3c35ef38b9">Елена</a><br />Брат: <a href="p75.html?s=40e5bd3c35ef38b9">Михаил</a><br />Брат: <a href="p77.html?s=40e5bd3c35ef38b9">Павел</a><br />Сестра: <a href="p70.html?s=40e5bd3c35ef38b9">Ульяна Христофоровна Большакова</a><br /></p>
+<h1>Николай Христофорович Большаков</h1>
+<p>Родился: ?<br />Умер: ?<br /></p><p>Отец: <a href="p71.html?s=40e67b3a001d5877">Христофор Большаков</a><br />Брат: <a href="p72.html?s=40e67b3a001d5877">Алексей Христофорович Большаков</a><br />Брат: <a href="p73.html?s=40e67b3a001d5877">Христофор Христофорович Большаков</a><br />Сестра: <a href="p74.html?s=40e67b3a001d5877">Елена Христофоровна (Большакова)</a><br />Брат: <a href="p75.html?s=40e67b3a001d5877">Михаил Христофорович Большаков</a><br />Брат: <a href="p77.html?s=40e67b3a001d5877">Павел Христофорович Большаков</a><br />Сестра: <a href="p70.html?s=40e67b3a001d5877">Ульяна Христофоровна Большакова</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
