--- a/index.html.files/p8.html
+++ b/index.html.files/p8.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g89'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g550'}, "*");
 </script>
 <div class="cwrap">
-<h1>Анатолий Блахиров</h1>
-<p>Родился: 18.12.1975<br />Умер: 02.03.2005<br />Продолжительность жизни: 29<br />Детей нет<br /></p><p>Отец: <a href="p1.html?s=40e5bd3c35ef38b9">Гаврил Блахиров</a><br />Мать: <a href="p6.html?s=40e5bd3c35ef38b9">Вера Назаровна Блахирова (Бабыканова)</a><br />Брат: <a href="p2.html?s=40e5bd3c35ef38b9">Виктор Блахиров</a><br />Сестра: <a href="p3.html?s=40e5bd3c35ef38b9">Валентина Блахирова</a><br /></p>
+<h1>Анатолий Гаврильевич Блахиров</h1>
+<p>Родился: 18.12.1975<br />Умер: 02.03.2005<br />Род: Блахировы<br />Продолжительность жизни: 29<br />Детей нет<br /></p><p>Отец: <a href="p1.html?s=40e67b3a001d5877">Гаврил Кузьмич Блахиров</a><br />Мать: <a href="p6.html?s=40e67b3a001d5877">Вера Назаровна Блахирова (Бабыканова)</a><br />Брат: <a href="p2.html?s=40e67b3a001d5877">Виктор Гаврильевич Блахиров</a><br />Сестра: <a href="p3.html?s=40e67b3a001d5877">Валентина Гавриловна Блахирова</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
