--- a/index.html.files/p83.html
+++ b/index.html.files/p83.html
@@ -32,11 +32,11 @@ a:hover, a:visited { text-decoration: none; }
 window.parent.postMessage({event_id: 'gmsg', data: 'g33'}, "*");
 </script>
 <div class="cwrap">
-<h1>Дьэбдьиэй</h1>
-<p>Родился: ?<br />Умер: ?<br />(Игнатьевы)<br /></p><p>Отец: <a href="p78.html?s=40e5bd3c35ef38b9">Дмитрий Иванович Блохыров</a><br />Мать: <a href="p79.html?s=40e5bd3c35ef38b9">Александра Николаевна Блохырова</a><br />Брат: <a href="p69.html?s=40e5bd3c35ef38b9">Гаврил Дмитриевич Былахиров</a><br />Брат: <a href="p81.html?s=40e5bd3c35ef38b9">Луха</a><br />Брат: <a href="p82.html?s=40e5bd3c35ef38b9">Хабырыылла</a><br /></p>
+<h1>Дьэбдьиэй Дмитриевна (Блохырова)</h1>
+<p>Родилась: ?<br />Умерла: ?<br />(Игнатьевы)<br /></p><p>Отец: <a href="p78.html?s=40e67b3a001d5877">Дмитрий Иванович Блохыров</a><br />Мать: <a href="p79.html?s=40e67b3a001d5877">Александра Николаевна Блохырова</a><br />Брат: <a href="p69.html?s=40e67b3a001d5877">Гаврил Дмитриевич Былахиров</a><br />Брат: <a href="p81.html?s=40e67b3a001d5877">Луха Дмитриевич Блохыров</a><br />Брат: <a href="p82.html?s=40e67b3a001d5877">Хабырыылла Дмитриевич Блохыров</a><br />Дочь: <a href="p118.html?s=40e67b3a001d5877">Александра Иннокентьевна Попова</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
