--- a/index.html.files/p88.html
+++ b/index.html.files/p88.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g377'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g839'}, "*");
 </script>
 <div class="cwrap">
-<h1>Александра Назарова</h1>
-<p>Родилась: 25.12.1930<br />Умерла: 23.08.2019<br />Продолжительность жизни: 88<br />2 о5олоох<br /></p><p>Отец: <a href="p85.html?s=40e5bd3c35ef38b9">Иосиф Терентьевич Дайбанныров</a><br />Мать: <a href="p86.html?s=40e5bd3c35ef38b9">Анисия Ивановна Татаринова</a><br />Брат: <a href="p87.html?s=40e5bd3c35ef38b9">Владимир Дайбанныров</a><br />Сестра: <a href="p68.html?s=40e5bd3c35ef38b9">Мария Дайбаннырова</a><br />Сестра: <a href="p89.html?s=40e5bd3c35ef38b9">Евдокия Наумова</a><br />Брат: <a href="p90.html?s=40e5bd3c35ef38b9">Владимир Дайбанныров</a><br /></p>
+<h1>Александра Иосифовна Назарова</h1>
+<p>Родилась: 25.12.1930<br />Умерла: 23.08.2019<br />Род: Дайбанныровы<br />Продолжительность жизни: 88<br />2 о5олоох<br /></p><p>Отец: <a href="p85.html?s=40e67b3a001d5877">Иосиф Терентьевич Дайбанныров</a><br />Мать: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Брат: <a href="p87.html?s=40e67b3a001d5877">Владимир Иосифович Дайбанныров</a><br />Сестра: <a href="p68.html?s=40e67b3a001d5877">Мария Иосифна Дайбаннырова</a><br />Сестра: <a href="p89.html?s=40e67b3a001d5877">Евдокия Иосифовна Наумова</a><br />Брат: <a href="p90.html?s=40e67b3a001d5877">Владимир Иосифович Дайбанныров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
