--- a/index.html.files/p93.html
+++ b/index.html.files/p93.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g359'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g821'}, "*");
 </script>
 <div class="cwrap">
-<h1>Афанасий Дайбанныров</h1>
-<p>Родился: ?<br />Умер: ?<br />6 о5олоох<br /></p><p>Отец: <a href="p91.html?s=40e5bd3c35ef38b9">Терентий Семенович Дайбанныров</a><br />Мать: <a href="p92.html?s=40e5bd3c35ef38b9">Татьяна Давыдовна Дайбаннырова</a><br />Брат: <a href="p85.html?s=40e5bd3c35ef38b9">Иосиф Терентьевич Дайбанныров</a><br />Брат: <a href="p94.html?s=40e5bd3c35ef38b9">Петр Дайбанныров</a><br />Брат: <a href="p95.html?s=40e5bd3c35ef38b9">Константин Дайбанныров</a><br /></p>
+<h1>Афанасий Терентьевич Дайбанныров</h1>
+<p>Родился: 03.01.1906<br />Умер: 1971<br />Род: Дайбанныровы<br />Продолжительность жизни: 64<br />6 о5олоох<br /></p><p>Отец: <a href="p91.html?s=40e67b3a001d5877">Терентий Семенович Дайбанныров</a><br />Мать: <a href="p92.html?s=40e67b3a001d5877">Татьяна Давыдовна Дайбаннырова</a><br />Брат: <a href="p85.html?s=40e67b3a001d5877">Иосиф Терентьевич Дайбанныров</a><br />Брат: <a href="p94.html?s=40e67b3a001d5877">Петр Терентьевич Дайбанныров</a><br />Брат: <a href="p95.html?s=40e67b3a001d5877">Константин Терентьевич Дайбанныров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
